# ai-skill-extractor

./: .gitignore  LICENSE  README.md  alembic.ini  pr_review.md  pybun.lockb  pyproject.toml
.agents/skills/rke-code-review/: SKILL.md
.agents/skills/rke-code-review/scripts/: pr-analyzer.py
.agents/skills/rke-start-task/: SKILL.md
.github/workflows/: ci.yml
configs/: config.yaml  repos.yaml
docs/: PLAN.md  PROMPT.md  SPEC.md  review_skill_extractor_spec.md
src/: runtime_env.py
src/analyze/: analyzer.py  llm_client.py  prompts.py
src/cli/: config_loader.py  main.py  preflight.py
src/curate/: __init__.py  deduplicator.py
src/extract/: embedder.py  extractor.py
src/generate/: __init__.py  generator.py
src/ingest/: collector.py  github_client.py
src/models/: config.py  db.py  repos.py
src/normalize/: normalizer.py
src/rke.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/storage/: database.py  migration_manager.py
src/storage/migrations/: env.py
src/storage/migrations/versions/: 20260309_2100_create_initial_schema.py  20260309_2205_add_skill_candidate_curation_fields.py  20260312_1400_add_ingest_sync_tables.py
tests/: test_analyze.py  test_analyzer.py  test_cli.py  test_config_loader.py  test_deduplicator.py  test_embedder.py  test_extractor.py  test_generate.py  test_ingest.py  test_normalize.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_production_readiness.py  test_runtime_env.py  test_storage.py
