[project]
dependencies = [
    "PyGithub>=2.1.1",
    "alembic>=1.12.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pytest",
    "pyyaml>=6.0.0",
    "sqlalchemy",
    "tenacity>=8.0.0",
    "typer>=0.9.0",
]
description = "Review Knowledge Extractor (RKE)"
name = "rke"
version = "0.1.0"

[tool.mypy]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
]
